# typechart-studio

./: .gitignore  .gitmodules  CHANGELONG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  build.sh  debug.sh  imgui.ini  run.sh  typechart-studio.sh
ImGuizmo/: ImSequencer.cpp
ImGuizmo/example/: imgui_internal.h
cmake/: toolchain-mingw32-i686.cmake  toolchain-mingw32-x86_64.cmake
imgui/: imgui_widgets.cpp
imgui/examples/example_emscripten_opengl3/: main.cpp
include/: CMakeLists.txt  editor.hpp
include/actions/: deleteitems.hpp  deletenote.hpp  editaction.hpp  editnote.hpp  editskip.hpp  flipnote.hpp  insertitems.hpp  placenote.hpp  placeskip.hpp  placestop.hpp  shiftnote.hpp
include/config/: beatpos.hpp  chartinfo.hpp  constants.hpp  init.hpp  note.hpp  notemaps.hpp  notesequence.hpp  notesequenceitem.hpp  skip.hpp  songinfo.hpp  songposition.hpp  stop.hpp  timeinfo.hpp  utils.hpp
include/resources/: texture.hpp
include/systems/: audiosystem.hpp
include/ui/: editwindow.hpp  editwindowmanager.hpp  menubar.hpp  preferences.hpp  timeline.hpp  ui.hpp  windowsizes.hpp
license/: LICENSE.openal.txt
licenses/: LICENSE.sndfile.txt
src/: CMakeLists.txt  editor.cpp  main.cpp  versionfile.h.in
src/actions/: deleteitems.cpp  deletenote.cpp  editaction.cpp  editnote.cpp  editskip.cpp  flipnote.cpp  insertitems.cpp  placenote.cpp  placeskip.cpp  placestop.cpp  shiftnote.cpp
src/config/: beatpos.cpp  chartinfo.cpp  init.cpp  notesequence.cpp  notesequenceitem.cpp  songinfo.cpp  songposition.cpp  timeinfo.cpp  utils.cpp
src/resources/: texture.cpp
src/systems/: audiosystem.cpp
src/ui/: editwindow.cpp  editwindowmanager.cpp  menubar.cpp  preferences.cpp  timeline.cpp
